--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+html, body{
+  margin:0;
+  padding:0;
+  overflow: hidden;
+  background-color: #FAFAFA;
+}
+
+p{
+  font-size: 18px;
+  font-family: 'Open Sans', sans-serif;
+
+}
+
+h1, h2, h3{
+  font-family: 'Open Sans', sans-serif;
+  padding: 20px;
+
+
+
+}
